# OpenGLExample

./: README.md
android/OpenglExample/: build.gradle  gradle.properties  settings.gradle
android/OpenglExample/app/: build.gradle
android/OpenglExample/app/src/androidTest/java/com/hy/ysq/openglexample/: ExampleInstrumentedTest.java
android/OpenglExample/app/src/main/: AndroidManifest.xml
android/OpenglExample/app/src/main/java/com/hy/ysq/openglexample/: MainActivity.java
android/OpenglExample/app/src/main/java/com/hy/ysq/render/: HelloTriangleRenderer.java  SquareRender.java
android/OpenglExample/app/src/main/java/com/hy/ysq/surface/: HelloTriangleSurface.java  SquareSurface.java
android/OpenglExample/app/src/main/res/layout/: activity_main.xml
android/OpenglExample/app/src/main/res/values/: strings.xml
android/OpenglExample/app/src/test/java/com/hy/ysq/openglexample/: ExampleUnitTest.java
android/OpenglExample/gradle/wrapper/: gradle-wrapper.properties
linux/: CMakeLists.txt
linux/src/: main.cc
linux/src/common/: glUtils.cc  glUtils.h
